# voice-to-voice-chatbot

./: .gitignore  README.md  interactive_voice_assistant.py  requirements.txt  setup.py
fints-demo/: .gitignore  API_MISMATCH.md  CMakeLists.txt  INTEGRATION.md  LAMP_GUIDE.md  LICENSE  README.md  WINDOWS.md
fints-demo/examples/: basic_demo.cpp  lamp_demo.cpp
fints-demo/scripts/: download_lamp4.bat  download_lamp4.sh  run_demo.bat  run_demo.sh  run_lamp.bat  run_lamp.sh  setup.bat  setup.sh
fints-demo/src/: fints.cpp  fints.h
